<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">会小秘</string>
    
   	<string name="homepage">首页</string>
   	<string name="tab_metting_list">会议列表</string>
   	<string name="tab_my_metting">我的会议</string>
   	<string name="tab_message">消息中心</string>
    
    <string name="home_menu_exit">退出</string>
    
    <string name="home_exit_warning">再按一次退出程序</string>
    
    <string name="title_activity_home">移动办公-会务小秘</string>
    <string name="title_activity_findpassword">找回密码</string>
    <string name="title_activity_my_metting">我的会议</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_login">登\u0020\u0020\u0020录</string>
    <string name="title_activity_metting_list">会议列表</string>
    <string name="title_activity_metting_details">会议详情</string>
    <string name="title_activity_enroll">报名</string>
    <string name="title_activity_comment">会议评论</string>
    <string name="title_activity_message">消息列表</string>
    <string name="title_activity_message_detail">消息详情</string>
    <string name="title_activity_invite">邀请好友参加</string>
    
    <string name="metting_apply">已报名</string>
    <string name="metting_already_signin">已签到</string>
    <string name="metting_all">所有</string>
    <string name="metting_meet_status">状态</string>
    <string name="metting_signin">签到</string>
    
    <string name="metting_details">查看会议详情>></string>
    
    <string name="metting_comment_submit">发送</string>
    <string name="metting_detail_relate_metting">相关会议</string>
    <string name="metting_detail_invite">邀请</string>
    <string name="time">时间:</string>
    <string name="metting_adress">会议地点：</string>
    <string name="metting_place">会议地点：%1$s</string>
    <string name="metting_time">会议时间：%1$s</string>
    <string name="metting_fee_and_res">%1$s会议 | %2$s</string>
    <string name="metting_limit">参会限制：</string>
    <string name="metting_collect">收藏</string>
    <string name="metting_detail">会议详细信息简介</string>
    <string name="metting_comment">评论</string>
    <string name="title_activity_personal">个人中心</string>
    <string name="personal_name">姓   名</string>
    <string name="personal_base_info">基本信息：</string>
    <string name="personal_received_message">我收到的消息：</string>
    <string name="personal_collect_metting">我收藏的会议</string>
    <string name="personal_enroll_metting">我报名的会议</string>
    <string name="personal_banding_weibo">微博绑定</string>
    <string name="personal_banding_weixin">微信绑定</string>
    <string name="personal_phone">手机号码</string>
    <string name="personal_email">邮件地址</string>
    <string name="personal_account">账  户</string>
    <string name="personal_unit">单位名称</string>
    <string name="personal_weibo">微博绑定</string>
    <string name="title_activity_user_edit">编辑</string>
    <string name="title_activity_modify_password">修改密码</string>
    
    <string name="edit_name">姓   名</string>
    <string name="edit_nick">昵   称</string>
    <string name="edit_password">密   码</string>
    <string name="edit_gender">性   别</string>
    <string name="edit_phone">手   机</string>
    <string name="edit_unit">公   司</string>
    <string name="edit_department">部   门</string>
    <string name="edit_position">职   位</string>
    <string name="edit_qq">Q      Q</string>
    <string name="edit_email">邮   箱</string>
    <string name="edit_weixin">微   信</string>
    
    <string name="choose_share_platform">请选择分享途径</string>
    <string name="share_content">我是%1$s,有个%2$s不错，我邀请你参加，下面是这个会议的二维码，扫一下就可以报名了。（wps·会小秘）</string>
    <string name="share_confirm">点击邀请</string>

    
    <string name="auth_success">授权成功</string>
    <string name="auth_failed">授权失败</string>
    <string name="auth_canceled">取消授权</string>
    
    
    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_canceled">取消分享</string>
    
    
    <string name="cancel_download_weibo">\t取消下载</string>
    
    <string name="weibo_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    
    
    <string name="back">返回</string>
    <string name="complete">完 成</string>
    
    <string name="home_phone">客服热线：400–000–0000</string>
    
	
    <string name="home_metting_list">会议列表</string>
    <string name="home_my_metting">我的会议</string>
    <string name="home_sign">会议签到</string>
    <string name="home_personal">个人中心</string>
    <string name="home_message">消息中心</string>
    <string name="home_about">关于我们</string>
    
    
    <string name="comment_more">显示全部</string>
    <string name="forget_password">忘记密码></string>
    <string name="register">如果您还没有账户，点击注册 ></string>
    <string name="login_password_hint">请输入登陆密码</string>
    <string name="login_username_hint">请输入手机号码</string>
    <string name="remenber">记住密码</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_v_button">点击获取验证码</string>
    
    <string name="register_password_hint">请输入密码</string>
    <string name="register_password_hint_new">请输入新密码</string>
    <string name="register_password2_hint">请输入确认密码</string>
    <string name="register_password2_hint_new">请输入确认新密码</string>
    <string name="register_name_hint">请输入姓名</string>
    <string name="register_unit_hint">请输入公司名称</string>
    <string name="register_email_hint">请输入邮箱</string>
    
    
    <string name="enroll">现在报名</string>
    <string name="enroll_inf">你报名的会议是%1$s</string>
    <string name="enroll_name">姓名</string>
    <string name="enroll_unit">公司</string>
    <string name="enroll_position">职务</string>
    <string name="enroll_phone">手机号码</string>
    <string name="enroll_button">确认报名</string>
    
    
    <string name="detail_share">邀请分享></string>
    <string name="detail_comment">发表观点></string>
    
    <string name="person_profile">头   像</string>
    
    <string name="modify_password_old">原密码</string>
    <string name="modify_password_new">新密码</string>
    <string name="modify_password_new2">确认密码</string>
    
    <string name="about_us">关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们</string>
    
</resources>