<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View 
        android:contentDescription="@null"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mt_split_gray"/>
    
    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            style="@style/mt_tab"
            android:drawableTop="@drawable/user_icon"
            android:text="@string/homepage" />

        <RadioButton
            style="@style/mt_tab"
            android:drawableTop="@drawable/user_icon"
            android:text="@string/tab_metting_list" />

        <RadioButton
            style="@style/mt_tab"
            android:drawableTop="@drawable/user_icon"
            android:text="@string/tab_my_metting" />

        <RadioButton
            style="@style/mt_tab"
            android:drawableTop="@drawable/user_icon"
            android:text="@string/tab_message" />

    </RadioGroup>
</LinearLayout>
