<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <ImageView
            android:id="@+id/personal_imageview"
            android:layout_width="60dp"
            android:contentDescription="@null"
            android:layout_height="60dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/anchor_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/personal_imageview"
            android:text="@string/personal_name" />

        <TextView
            android:id="@+id/personal_user_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/anchor_user_name"
            android:layout_toRightOf="@id/anchor_user_name" />

        <TextView
            android:id="@+id/anchor_base_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/anchor_user_name"
            android:layout_below="@id/anchor_user_name"
            android:layout_marginTop="10dp"
            android:text="@string/personal_base_info" />

        <TextView
            android:id="@+id/personal_base_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/anchor_base_info"
            android:layout_toRightOf="@id/anchor_base_info"
            android:ellipsize="end"
            android:lines="4"
            android:maxEms="8"
            android:minEms="8" />

        <TextView
            android:id="@+id/anchor_received_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/anchor_base_info"
            android:layout_below="@id/personal_base_info_textview"
            android:layout_marginTop="30dp"
            android:text="@string/personal_received_message" />

        <TextView
            android:id="@+id/personal_received_message_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/anchor_received_message"
            android:layout_toRightOf="@id/anchor_received_message"
            android:textColor="#BB0000" />

        <TextView
            android:id="@+id/anchor_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/anchor_received_message"
            android:layout_below="@id/anchor_received_message"
            android:layout_marginTop="20dp"
            android:text="@string/personal_collect_metting" />

        <TextView
            android:id="@+id/personal_collect_metting_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/anchor_favorite"
            android:layout_toRightOf="@id/anchor_favorite"
            android:textColor="#BB0000" />

        <TextView
            android:id="@+id/anchor_taked_conference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/anchor_favorite"
            android:layout_below="@id/anchor_favorite"
            android:layout_marginTop="20dp"
            android:text="@string/personal_enroll_metting" />

        <TextView
            android:id="@+id/personal_enroll_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/anchor_taked_conference"
            android:layout_toRightOf="@id/anchor_taked_conference"
            android:textColor="#BB0000" />

        <Button
            android:id="@+id/personal_banding_weibo_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/anchor_taked_conference"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/personal_button_weibo_bg"
            android:paddingLeft="20dp"
            android:text="@string/personal_banding_weibo"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/personal_banding_weixin_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/personal_banding_weibo_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/personal_button_weixin_bg"
            android:paddingLeft="20dp"
            android:text="@string/personal_banding_weixin"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

</ScrollView>
