<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mt_login_bg" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp" >
        
        <EditText
            android:id="@+id/register_password_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_layout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/register_edit_text_up"
            android:hint="@string/register_password_hint_new"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textSize="15sp" >
        </EditText>

        <EditText
            android:id="@+id/register_password_confirm_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_editext"
            android:layout_centerHorizontal="true"
            android:padding="15dp"
            android:background="@drawable/register_edit_text_down"
            android:textSize="15sp"
            android:layout_marginTop="-1dp"
            android:hint="@string/register_password2_hint_new"
            android:inputType="textPassword"
            android:singleLine="true" >
        </EditText>

        <Button
            android:id="@+id/register_complete_button"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="48dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@id/register_password_confirm_editext"
            android:layout_centerHorizontal="true"
            android:background="@drawable/common_blue_button"
            android:text="@string/complete"
            android:textColor="@color/mt_white" />
    </RelativeLayout>

</ScrollView>