<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mt_home_bg"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/person_up"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/modify_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/modify_password_old" />
            
            <EditText
                android:id="@+id/modify_password_old"
                style="@style/modify_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:inputType="text"
                android:textColor="#7a7a7a" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            android:background="@drawable/person_middle"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="13dp"
            android:paddingTop="13dp" >

            <TextView
                style="@style/modify_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/modify_password_new" />
  
            <EditText
                android:id="@+id/modify_password_new_textview"
                style="@style/modify_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:inputType="text"
                android:lines="1"
                android:textColor="#7a7a7a"/>
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            android:background="@drawable/person_down"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="13dp"
            android:paddingTop="13dp" >

            <TextView
                android:id="@+id/edit_anchor_post"
                style="@style/modify_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/modify_password_new2" />
  
            <EditText
                android:id="@+id/modify_password_con_textview"
                style="@style/modify_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:inputType="text"
                android:lines="1"
                android:textColor="#7a7a7a" />

        </LinearLayout>
        
		<Button
            android:id="@+id/modify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="40dp"
            android:padding="15dp"
            android:background="@drawable/common_blue_button"
            android:text="确认修改"
            android:textColor="@color/mt_white"
            android:textSize="16sp" />
        
    </LinearLayout>

</ScrollView>
